--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
                 </a>
             </div>
         </div>
-
-
         <div class="card">
             <div class="card-header">
                 <h2>komga</h2>
@@ -83,7 +81,6 @@
                 </a>
             </div>
         </div>
-
         <div class="card">
             <div class="card-header">
                 <h2>青龙面板</h2>
@@ -126,8 +123,6 @@
                 </a>
             </div>
         </div>
-
-
         <div class="card">
             <div class="card-header">
                 <h2>FreshRSS</h2>
@@ -156,9 +151,6 @@
                 </a>
             </div>
         </div>
-
-
-
         <div class="card">
             <div class="card-header">
                 <h2>qbittorrent-nox</h2>
@@ -167,15 +159,13 @@
                 <p>一个无界面的BitTorrent客户端</p>
                 <p>Github开源地址: <a href="https://github.com/qbittorrent/qBittorrent" target="_blank">
                         https://github.com/qbittorrent/qBittorrent
-                        
+
                     </a></p>
                 <a href="http://qbit.sus.xyz" class="button" target="_blank">
                     前往
                 </a>
             </div>
         </div>
-
-
         <div class="card">
             <div class="card-header">
                 <h2>clash-core-pro</h2>
@@ -190,18 +180,12 @@
                 </button>
             </div>
         </div>
+    </div>
+    <div class="top-fixed">
 
-        <div class="card">
-            <div class="card-header">
-                <h2>sus</h2>
-            </div>
-            <div class="card-content">
-                <p>服务器主机，也就是本页</p>
-                <a href="http://sus.xyz" class="button" target="_self">
-                    前往
-                </a>
-            </div>
-        </div>
+        <h2>sus LocalServer跳转目录</h2>
+
+
     </div>
     <div class="buttom-fixed">
         <div class="">
