修复两个链接指向不正确的咲bug

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>Github开源地址: <a href="https://github.com/mar10/wsgidav" target="_blank">
                         https://github.com/mar10/wsgidav
                     </a></p>
-                <a href="http://onedev.ssh.sus.xyz" class="button" target="_blank">
+                <a href="http://wsgidav.sus.xyz/" class="button" target="_blank">
                     前往
                 </a>
             </div>
@@ -76,7 +76,7 @@
                 <p>Github开源地址: <a href="https://github.com/1Panel-dev/1Panel" target="_blank">
                         https://github.com/1Panel-dev/1Panel
                     </a></p>
-                <a href="http://onepanel.ssh.sus.xyz" class="button" target="_blank">
+                <a href="http://onepanel.sus.xyz" class="button" target="_blank">
                     前往
                 </a>
             </div>
