修复两个链接错误

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>Github开源地址: <a href="https://github.com/gotson/komga" target="_blank">
                         https://github.com/gotson/komga
                     </a></p>
-                <a href="http://komga.ssh.sus.xyz" class="button" target="_blank">
+                <a href="http://komga.sus.xyz" class="button" target="_blank">
                     前往
                 </a>
             </div>
@@ -92,7 +92,7 @@
                 <p>Github开源地址: <a href="https://github.com/whyour/qinglong" target="_blank">
                         https://github.com/whyour/qinglong
                     </a></p>
-                <a href="http://ql.ssh.sus.xyz" class="button" target="_blank">
+                <a href="http://ql.sus.xyz" class="button" target="_blank">
                     前往
                 </a>
             </div>
@@ -106,7 +106,7 @@
                 <p>Github开源地址: <a href="https://github.com/cdr/code-server" target="_blank">
                         https://github.com/cdr/code-server
                     </a></p>
-                <a href="http://code-server.ssh.sus.xyz" class="button" target="_blank">
+                <a href="http://code-server.sus.xyz" class="button" target="_blank">
                     前往
                 </a>
             </div>
